# skypro-domashka-git

./: README.md  main.py  pyproject.toml
package-skypro-domashka-git/: pyproject.toml
src/: generators.py  masks.py  processing.py  widget.py
tests/: conftest.py  test_generators.py  test_masks.py  test_prcessing.py  test_processing.py  test_widget.py
