[project]
name = "package-skypro-domashka-git"
version = "0.1.0"
description = ""
authors = [
    {name = "Georgij--777",email = "georgij--777@yandex.ru"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "package_skypro_domashka_git", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
